# conflict_rez

./: .gitignore  README.md  environment.yml  gurobi.env  pyproject.toml  requirements.txt  setup.py
confrez/: base_node.py  controller_types.py  dynamic_model.py  obstacle_types.py  pytypes.py  test.ipynb  vehicle_types.py
confrez/control/: bezier.py  compute_sets.py  distributed_planner.py  dynamic_model.py  generate_figs.py  multi_vehicle_planner.py  multicar.py  planner.py  realtime_visualizer.py  rect2circles.py  utils.py  vehicle.py  vehicle_follower.py
confrez/rl/: a2c.py  agent.py  environment.yml  experiment.py  maddpg.py  maddpg_train.py  model.py  multiagent_buffer.py  pistonball_cont.py  pistonball_template.py  pklot.py  pklot_env.py  pklot_env_unicycle.py  pklot_env_unicycle_cont.py  ray_pklot.py  ray_pklot_render.py  ray_tuner_pklot.py  record_states_history.py  sweep.yaml  test.py  test_env.py  test_env_unicycle.py  test_env_unicycle_cont.py  test_pistonball_cont.py  tianshou_experiment.py  tianshou_train.py  tianshou_train_ddpg_cont.py  tianshou_train_ppo.py  tianshou_train_ppo_cont.py  tianshou_train_sac_cont.py  tianshou_train_sacdisc.py  tianshou_train_unicycle.py  tianshou_train_unicycle_ddpg.py  train.py  utils.py
confrez/rl/cfg/: config.yaml
confrez/rl/envs/: debug.py  pklot_env_unicycle.py  test_env.py
confrez/rl/maddpg/: agent.py  maddpg.py  main.py  networks.py
confrez/rl/stable-baseline/: train.py
confrez/rl/utils/: render.py  train_utils.py
confrez/rl/wandb/: latest-run
ros2_ws/src/confrez_ros/: CMakeLists.txt  package.xml
(+108 files in other folders)
